feat: selected option

--- a/src/components/sbb-toggle-option/sbb-toggle-option.scss
+++ b/src/components/sbb-toggle-option/sbb-toggle-option.scss
@@ -70,13 +70,16 @@ sbb-icon,
     visibility: hidden;
     @include text-xs--bold;
   }
+
+  label {
+    cursor: inherit;
+  }
 }
 
 :host([checked]) {
   .sbb-toggle-option {
     @include text-xs--bold;
 
-    background-color: white;
     color: var(--sbb-toggle-selected-option-text-color);
   }
 }
