--- a/src/components/sbb-checkbox-group/sbb-checkbox-group.scss
+++ b/src/components/sbb-checkbox-group/sbb-checkbox-group.scss
@@ -3,8 +3,10 @@
 @include host-component-properties;
 
 @mixin horizontal-orientation {
-  --sbb-radio-button-group-orientation: row;
-  --sbb-radio-button-group-gap: var(--sbb-spacing-fixed-6x);
+  --sbb-checkbox-group-orientation: row;
+  --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-6x);
+  --sbb-checkbox-group-width: max-content;
+  --sbb-checkbox-group-checkbox-width: auto;
 }
 
 $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
@@ -14,8 +16,10 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 }
 
 :host([orientation='vertical']) {
-  --sbb-radio-button-group-orientation: column;
-  --sbb-radio-button-group-gap: var(--sbb-spacing-fixed-3x);
+  --sbb-checkbox-group-orientation: column;
+  --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-3x);
+  --sbb-checkbox-group-width: 100%;
+  --sbb-checkbox-group-checkbox-width: 100%;
 }
 
 @each $breakpoint in $breakpoints {
@@ -27,15 +31,19 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   }
 }
 
-.sbb-radio-group {
+.sbb-checkbox-group {
   display: flex;
-  flex-direction: var(--sbb-radio-button-group-orientation);
-  gap: var(--sbb-radio-button-group-gap);
+  flex-direction: var(--sbb-checkbox-group-orientation);
+  gap: var(--sbb-checkbox-group-gap);
   align-items: flex-start;
-  width: max-content;
+  width: var(--sbb-checkbox-group-width);
 }
 
-.sbb-radio-group__error {
+.sbb-checkbox-group__error {
   display: inline-block;
   margin-block-start: var(--sbb-spacing-fixed-1x);
+}
+
+::slotted(sbb-checkbox) {
+  width: var(--sbb-checkbox-group-checkbox-width);
 }
