--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -57,3 +57,17 @@
     height: 0;
   }
 }
+
+@mixin invisibleContainerOverlay {
+  position: absolute;
+  opacity: 0;
+  inset: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  cursor: inherit;
+
+  // Puts the element behind the parent while keeping it visible so that
+  // it allows `click` events to propagate up.
+  z-index: -1;
+}
