--- a/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
+++ b/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
@@ -13,16 +13,17 @@
 :host {
   display: block;
 
-  --dot-size-large: #{px-to-rem-build(10)};
-  --dot-size-small: #{px-to-rem-build(8)};
-  --border-width: var(--sbb-border-width-2x);
-  --spacing-small: var(--sbb-spacing-fixed-1x);
+  --sbb-dot-size-large: #{px-to-rem-build(10)};
+  --sbb-dot-size-small: #{px-to-rem-build(8)};
+  --sbb-pearl-chain-height: var(--sbb-border-width-2x);
+  --sbb-pearl-chain-spacing-small: var(--sbb-spacing-fixed-1x);
   --color-white: var(--sbb-color-white-default);
   --color-default: var(--sbb-color-black-default);
   --color-current-location: var(--sbb-color-red-default);
   --color-current-location-dark: var(--sbb-color-red150-default);
   --color-cancellation: var(--sbb-color-red-default);
   --color-past: var(--sbb-color-metal-default);
+  --leg-width: 100%;
 }
 
 .sbb-pearl-chain {
@@ -32,15 +33,15 @@
   flex-wrap: nowrap;
   color: var(--sbb-color-default);
   width: 100%;
-  padding-block-start: calc((var(--dot-size-large) - var(--border-width)) / 2);
-  padding-block-end: calc((var(--dot-size-large) - var(--border-width)) / 2);
-  padding-inline-end: var(--dot-size-large);
+  padding-block-start: calc((var(--sbb-dot-size-large) - var(--sbb-pearl-chain-height)) / 2);
+  padding-block-end: calc((var(--sbb-dot-size-large) - var(--sbb-pearl-chain-height)) / 2);
+  padding-inline-end: var(--sbb-dot-size-large);
 }
 
 // first and last dot
 .sbb-pearl-chain::before,
 .sbb-pearl-chain::after {
-  --dot-size: var(--dot-size-large);
+  --dot-size: var(--sbb-dot-size-large);
   @include dot;
 
   background-color: currentcolor;
@@ -97,8 +98,8 @@
   flex-shrink: 0;
   flex-grow: 0;
   position: relative;
-  height: var(--border-width);
-  border-inline-end: var(--spacing-small) solid var(--color-white);
+  height: var(--sbb-pearl-chain-height);
+  border-inline-end: var(--sbb-pearl-chain-spacing-small) solid Canvas;
   background-color: currentcolor;
   width: var(--leg-width);
 
@@ -121,13 +122,13 @@
 // dot on leg
 .sbb-pearl-chain__leg:not(:first-child) {
   &::before {
-    --dot-size: var(--dot-size-small);
+    --dot-size: var(--sbb-dot-size-small);
     @include dot;
 
-    inset-block-start: calc(var(--dot-size) / -2 + var(--border-width) / 2);
+    inset-block-start: calc(var(--dot-size) / -2 + var(--sbb-pearl-chain-height) / 2);
     inset-inline-start: 0;
-    background-color: var(--color-white);
-    border: var(--border-width) solid currentcolor;
+    background-color: Canvas;
+    border: var(--sbb-pearl-chain-height) solid currentcolor;
     z-index: 2;
 
     @include ifForcedColors {
@@ -146,7 +147,7 @@
   inset-block-end: 0;
   inset-inline-start: 0;
   background-color: currentcolor;
-  border-radius: var(--border-width);
+  border-radius: var(--sbb-pearl-chain-height);
   z-index: 1;
 
   @include ifForcedColors {
@@ -159,7 +160,7 @@
 }
 
 .sbb-pearl-chain__leg:last-of-type::after {
-  inset-inline-end: calc(-1 * var(--border-width));
+  inset-inline-end: calc(-1 * var(--sbb-pearl-chain-height));
 }
 
 .sbb-pearl-chain__leg--progress::after {
@@ -170,14 +171,6 @@
 .sbb-pearl-chain__leg--cancellation {
   color: var(--color-cancellation);
 
-  .sbb-pearl-chain--past & {
-    color: var(--color-past);
-
-    @include ifForcedColors {
-      color: GrayText;
-    }
-  }
-
   @include ifForcedColors {
     color: ActiveText;
   }
@@ -185,15 +178,10 @@
 
 .sbb-pearl-chain__leg--cancellation::after {
   background-color: unset;
-  background-image: linear-gradient(
-    to right,
-    currentcolor 0%,
-    currentcolor 50%,
-    var(--color-white) 50%
-  );
+  background-image: linear-gradient(to right, currentcolor 0%, currentcolor 50%, Canvas 50%);
   background-repeat: repeat-x;
-  background-size: calc(2 * var(--spacing-small)) var(--border-width);
-  inset-inline-end: var(--border-width);
+  background-size: calc(2 * var(--sbb-pearl-chain-spacing-small)) var(--sbb-pearl-chain-height);
+  inset-inline-end: var(--sbb-pearl-chain-height);
 }
 
 .sbb-pearl-chain__leg--cancellation::after,
@@ -208,7 +196,7 @@
 .sbb-pearl-chain__position {
   position: absolute;
 
-  --dot-size: var(--dot-size-large);
+  --dot-size: var(--sbb-dot-size-large);
   @include dot;
 
   background-color: var(--color-current-location);
