refactor: 1428 sbb-train-formation initial implementation
- high contrast fixes for sbb-sectors, sbb-trains and sbb-wagons
- move accessibility text for sbb-train direction label to aria-label

--- a/src/components/sbb-sector/sbb-sector.scss
+++ b/src/components/sbb-sector/sbb-sector.scss
@@ -10,6 +10,10 @@
   --sbb-sector-line-color: var(--sbb-color-cement-default);
   --sbb-sector-wagon-width: var(--sbb-train-formation-wagon-width);
   --sbb-sector-wagon-gap: var(--sbb-spacing-fixed-1x);
+
+  @include ifForcedColors {
+    --sbb-sector-line-color: CanvasText;
+  }
 }
 
 .sbb-sector {
