--- a/src/components/sbb-toggle-option/sbb-toggle-option.scss
+++ b/src/components/sbb-toggle-option/sbb-toggle-option.scss
@@ -3,8 +3,20 @@
 @include host-component-properties;
 
 :host {
-  flex-grow: var(--sbb-toggle-option-flex-grow);
+  flex: var(--sbb-toggle-option-flex-grow) 0 var(--sbb-toggle-option-flex-basis);
+  max-width: var(--sbb-toggle-option-max-width);
   z-index: 1;
+
+  // reserve horizontal space for bold variant when selected
+  &::before {
+    @include text-xs--bold;
+
+    content: attr(value);
+    padding-inline: var(--sbb-toggle-padding-inline);
+    display: block;
+    visibility: hidden;
+    height: 0;
+  }
 }
 
 :host input[type='radio'] {
@@ -15,19 +27,14 @@
   @include text-xs--regular;
 
   display: flex;
-  padding-inline: var(--sbb-toggle-padding-inline);
   padding-block: var(--sbb-toggle-padding-block);
   border-radius: var(--sbb-border-radius-16x);
   color: var(--sbb-toggle-option-text-color);
   justify-content: center;
 
-  &::after {
-    content: attr(data-text);
-    visibility: hidden;
-    @include text-xs--bold;
-  }
-
   label {
+    @include ellipsis;
+
     cursor: inherit;
   }
 }
