refactor: 1428 sbb-train-formation initial implementation
- PR issues sbb-sectors

--- a/src/components/sbb-sector/sbb-sector.scss
+++ b/src/components/sbb-sector/sbb-sector.scss
@@ -19,26 +19,27 @@
 .sbb-sector {
   flex: 0 0 auto;
 
-  // Maximal 3 wagons are allowed inside one sector, plus the gaps in between.
+  // At maximum 3 wagons are allowed inside one sector, plus the gaps in between.
   max-width: calc(var(--sbb-sector-wagon-width) * 3 + (2 * var(--sbb-sector-wagon-gap)));
-
-  h3 {
-    color: var(--sbb-sector-label-color);
-    text-align: center;
-    position: relative;
-    @include text-s--regular;
-
-    &::before {
-      content: '';
-      position: absolute;
-      inset: 50% 0;
-      height: 1px;
-      background-color: var(--sbb-sector-line-color);
-    }
-  }
 }
 
 .sbb-sector__label {
+  color: var(--sbb-sector-label-color);
+  text-align: center;
+  position: relative;
+  @include text-s--regular;
+
+  // Line behind the sector-label
+  &::before {
+    content: '';
+    position: absolute;
+    inset: 50% 0;
+    height: 1px;
+    background-color: var(--sbb-sector-line-color);
+  }
+}
+
+.sbb-sector__sticky-wrapper {
   background-color: var(--sbb-sector-label-background);
   position: sticky;
   inset: auto 0;
