--- a/src/components/sbb-toggle/sbb-toggle.scss
+++ b/src/components/sbb-toggle/sbb-toggle.scss
@@ -13,7 +13,26 @@
   --sbb-toggle-padding-block: var(--sbb-spacing-fixed-1x);
   --sbb-toggle-cursor: pointer;
 
+  width: max-content;
   position: relative;
+
+  &::after {
+    content: attr(value);
+    @include text-xs--bold;
+
+    color: transparent;
+    padding-inline: var(--sbb-toggle-padding-inline);
+    display: inline-block;
+    background-color: var(--sbb-color-white-default);
+    border: var(--sbb-border-width-2x) solid var(--sbb-color-cloud-default);
+    border-radius: var(--sbb-border-radius-16x);
+    position: absolute;
+    max-width: 200px;
+    width: max-content;
+    height: 100%;
+    top: 0;
+    transition: all var(--sbb-animation-duration-6x) ease-in;
+  }
 }
 
 :host([even]) {
@@ -21,6 +40,12 @@
   --sbb-toggle-option-flex-grow: 0;
   --sbb-toggle-option-flex-basis: 50%;
   --sbb-toggle-option-max-width: 50%;
+
+  width: 100%;
+
+  &::after {
+    width: 50%;
+  }
 }
 
 :host([disabled]) {
@@ -34,23 +59,13 @@
   --sbb-toggle-padding-block: var(--sbb-spacing-fixed-3x);
 }
 
-:host[selected-index='0']::after {
-  content: '';
-  background-color: var(--sbb-color-white-default);
-  border: var(--sbb-border-width-2x) solid var(--sbb-color-cloud-default);
-  border-radius: var(--sbb-border-radius-16x);
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  top: 0;
+:host([data-checked-id='0'])::after {
   left: 0;
-  right: auto;
-  transition: all var(--sbb-animation-duration-6x) ease-in;
 }
 
-:host[selected-index='1']::after {
-  left: auto;
-  right: 0;
+:host([data-checked-id='1'])::after {
+  left: 100%;
+  transform: translateX(-100%);
 }
 
 .sbb-toggle {
