--- a/src/components/sbb-toggle-check/sbb-toggle-check.scss
+++ b/src/components/sbb-toggle-check/sbb-toggle-check.scss
@@ -75,10 +75,7 @@ input[type='checkbox'] {
 
 .toggle-check__label {
   padding-block-start: calc(
-    (
-        var(--toggle-check-height) -
-          (var(--sbb-typo-line-height-body-text) * var(--sbb-font-size-text-s))
-      ) / 2
+    (var(--toggle-check-height) - (var(--sbb-typo-line-height-body-text) * 1em)) / 2
   );
 }
 
