--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -43,13 +43,13 @@
   --sbb-form-field-error-padding-block-start-override: var(--sbb-form-field-error-divider-width);
 }
 
-:host(.sbb-form-field--readonly),
-:host(.sbb-form-field--disabled) {
+:host([data-readonly]),
+:host([data-disabled]) {
   --sbb-form-field-background-color: var(--sbb-color-milk-default);
   --sbb-form-field-border-color: var(--sbb-color-graphite-default);
 }
 
-:host(.sbb-form-field--disabled) {
+:host([data-disabled]) {
   --sbb-form-field-label-color: var(--sbb-color-graphite-default);
   --sbb-form-field-prefix-color: var(--sbb-color-graphite-default);
   --sbb-form-field-text-color: var(--sbb-color-graphite-default);
@@ -61,7 +61,7 @@
   }
 }
 
-:host(.sbb-form-field--readonly) {
+:host([data-readonly]) {
   --sbb-form-field-label-color: var(--sbb-color-granite-default);
   --sbb-form-field-prefix-color: var(--sbb-color-granite-default);
 }
@@ -71,7 +71,7 @@
   --sbb-form-field-prefix-color: var(--sbb-color-charcoal-default);
 }
 
-:host(.sbb-invalid) {
+:host([data-invalid]) {
   --sbb-form-field-border-color: var(--sbb-color-red125-default);
   --sbb-form-field-text-color: var(--sbb-color-red125-default);
 
@@ -81,7 +81,8 @@
   }
 }
 
-:host(.sbb-form-field--empty-error) {
+/* stylelint-disable-next-line plugin/stylelint-bem-namics */
+:host(:not([data-has-error])) {
   --sbb-form-field-error-padding-block-start: 0;
 }
 
