--- a/src/components/sbb-toggle-option/sbb-toggle-option.scss
+++ b/src/components/sbb-toggle-option/sbb-toggle-option.scss
@@ -3,13 +3,14 @@
 @include host-component-properties;
 
 :host {
-  flex: var(--sbb-toggle-option-flex-grow) 0 var(--sbb-toggle-option-flex-basis);
-  max-width: var(--sbb-toggle-option-max-width);
+  width: fit-content;
+  max-width: 50%;
   z-index: 1;
 
   // reserve horizontal space for bold variant when selected
   &::before {
     @include text-xs--bold;
+    @include ellipsis;
 
     content: attr(value);
     padding-inline: var(--sbb-toggle-padding-inline);
