--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -8,32 +8,27 @@
   --sbb-navigation-position-y: 0;
   --sbb-navigation-animation-duration: var(--sbb-animation-duration-3x);
   --sbb-navigation-animation-easing: ease;
-  --sbb-navigation-transform: translateX(-100%);
   --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-4x);
   --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-l);
-
-  // 85vh is not an exact value but looks optimized for mobile view.
-  --sbb-navigation-height: 100vh;
   --sbb-navigation-width: 100vw;
   --sbb-navigation-backdrop-color: transparent;
 
   @include mq($from: micro) {
-    --sbb-dialog-padding-inline: var(--sbb-spacing-fixed-5x);
+    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-5x);
   }
 
   @include mq($from: small) {
-    --sbb-dialog-padding-inline: var(--sbb-spacing-fixed-12x);
+    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-12x);
   }
 
   @include mq($from: medium) {
-    --sbb-dialog-padding-inline: var(--sbb-spacing-fixed-14x);
+    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-14x);
   }
 
   @include mq($from: large) {
     --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-xl);
-    --sbb-dialog-padding-inline: var(--sbb-spacing-fixed-16x);
+    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-16x);
     --sbb-navigation-position: absolute;
-    --sbb-navigation-transform: translateX(-100%);
     --sbb-navigation-width: #{px-to-rem-build(320)};
 
     // navigation backdrop (not visible on mobile)
@@ -54,17 +49,17 @@
   }
 
   @include mq($from: wide) {
-    --sbb-dialog-padding-inline: var(--sbb-spacing-fixed-18x);
+    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-18x);
   }
 
   @include mq($from: ultra) {
-    --sbb-dialog-padding-inline: var(--sbb-spacing-fixed-30x);
+    --sbb-navigation-padding-inline: var(--sbb-spacing-fixed-30x);
     --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-xxl);
   }
 
-  position: fixed;
-  left: 0;
-  top: 0;
+  position: var(--sbb-navigation-position);
+  left: var(--sbb-navigation-position-x);
+  top: var(--sbb-navigation-position-y);
   z-index: 10;
 }
 
@@ -87,13 +82,12 @@
   position: var(--sbb-navigation-position);
   visibility: hidden;
   opacity: 0;
-  left: 0;
-  top: 0;
+  left: var(--sbb-navigation-position-x);
+  top: var(--sbb-navigation-position-y);
   border: none;
   pointer-events: none;
   width: var(--sbb-navigation-width);
-  height: var(--sbb-navigation-height);
-  text-align: start;
+  height: 100vh;
   color: var(--sbb-color-white-default);
   background-color: var(--sbb-color-midnight-default);
   padding-inline: var(--sbb-navigation-padding-inline);
@@ -119,21 +113,13 @@
   @include ifForcedColors {
     outline: var(--sbb-border-width-1x) solid CanvasText;
   }
-
-  @include mq($from: large) {
-    &[open] {
-      top: var(--sbb-navigation-position-y);
-      left: var(--sbb-navigation-position-x);
-      height: var(--sbb-navigation-height);
-    }
-  }
 }
 
 @keyframes open {
   from {
     visibility: hidden;
     opacity: 0;
-    transform: var(--sbb-navigation-transform);
+    transform: translateX(-100%);
   }
 
   to {
@@ -152,7 +138,7 @@
 
   to {
     visibility: hidden;
-    opacity: 1;
-    transform: var(--sbb-navigation-transform);
+    opacity: 0;
+    transform: translateX(-100%);
   }
 }
